--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon server/start.js"
   },
   "dependencies": {
+    "bluebird": "^2.9.14",
     "body-parser": "^1.12.0",
     "bower": "^1.3.12",
     "chai": "^2.1.0",
